# final_example

./: .clang-format  .vimrc  CMakeLists.txt
src/: log.hpp  main.cpp  musicplayer.cpp  musicplayer.hpp  playerinterface.hpp  sdlplayer.cpp  sdlplayer.hpp
tests/: musicplayertests.cpp  playermock.hpp
